# record

./: README.md
MY_workspace/Notebook/: Regular_Expression.md  git.md  javascript.md
Note_and_hw/hw/: Lingo1.lg4  hw5.aux  hw5.tex
Note_and_hw/hw_myuse/: 7_20.md
Note_and_hw/hw_myuse/latex/: 7_20.aux  7_20.out  7_20.tex
Note_and_hw/latex/: hw.aux  hw.out  hw.tex
Note_and_hw/mechine/: Mechanical_Design.md  hw.md
Note_and_hw/operations_research/: review.md
Note_and_hw/operations_research/struggle/: god.aux  god.out  god.tex
Note_and_hw/operations_research/try_hard/: MY_god.aux  MY_god.out  MY_god.tex  review.md
Note_and_hw/operations_research_hw/latex/: ac_solve.py  hw.aux  hw.out  hw.tex
Note_and_hw/operations_research_hw/other_src/: hw.md  solve.py  solve2.py
WORK_space/TO_better_mat_lingo/MATLAB/: calculate.m  control_system.m  pic.m
WORK_space/TO_better_mat_lingo/lingo/: Lingo2.lg4  hw2.lg4  hw2.md
WORK_space/other_workspace_c/openssl_vc2019/: readme.txt
WORK_space/other_workspace_c/src/: debug.txt  debug2.txt  main.c
WORK_space/work_spc_py/: pic.py
WORK_space/work_spc_py/python/: practice.py
WORK_space/workspace_cpp/Html/: README.md
WORK_space/workspace_cpp/final/: report.md  (+1 more)
WORK_space/workspace_cpp/final_2/toy-serde-master/: .gitignore  CMakeLists.txt  README.md
WORK_space/workspace_cpp/final_2/toy-serde-master/src/: binserde.hpp  common.hpp  main.cpp  toyserde.hpp  xmlserde.hpp
WORK_space/workspc_c51_or_asm/: exam.c  pro.c  remember.c
codeforces/: April.md  codeforces.cpp
leetcode/: Feb.md  march_two.md
luogu/: luogu.cpp
(+497 files in other folders)
